<resources>
    <string name="app_name">MyProyectoFinal</string>
    <string name="Name">Nombre</string>
    <string name="firstName">Apellido Paterno</string>
    <string name="lastName">Apellido Materno</string>
    <string name="userName">Usuario</string>
    <string name="Mail">Correo</string>
    <string name="Age">Edad</string>
    <string name="Number">Numero</string>
    <string name="Gender">Genero</string>
    <string name="Type">Tipo de Persona</string>
    <string name="Password">Contraseña</string>
    <string name="writeName">Escribir Nombre</string>
    <string name="writefirstName">Escribir Apellido</string>
    <string name="writelastName">Escribir Apellido</string>
    <string name="writeuserName">Escribir Usuario</string>
    <string name="writeMail">Escribir Correo</string>
    <string name="writeAge">Escribir Edad</string>
    <string name="writeNumber">Escribir Numero</string>
    <string name="writeGender">Seleccionar Genero</string>
    <string name="writeGender1">Masculino</string>
    <string name="writeGender2">Femenino</string>
    <string name="writeType">Seleccionar el Tipo de Persona</string>
    <string name="writeType1">Alumno</string>
    <string name="writeType2">Profesor</string>
    <string name="writePassword">Escribir Contra</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="back">Volver</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="recoverPassword">Recuperar contraseña</string>
    <string name="welcome">Welcome to the Jungle</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_copiar">Cerrar Sesión</string>
    <string name="list_name">Nombre de la Cuenta</string>
    <string name="list_nameHint">Escribir el Nombre</string>
    <string name="list_pass">Contraseña de la Cuenta</string>
    <string name="list_passHint">Escribir la Contraseña</string>
    <string name="list_image">Seleccione la Imagen Preferida</string>
    <string name="list_image1">Default</string>
    <string name="list_image2">Opcion 1</string>
    <string name="list_image3">Opcion 2</string>
    <string name="list_image4">Opcion 3</string>
    <string name="list_button">Enviar</string>
</resources>