<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05DBF6"
    tools:context=".OlvidePass">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="67dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_tunatech" />

    <Button
        android:id="@+id/forget2"
        android:layout_width="275dp"
        android:layout_height="73dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F6B900"
        android:onClick="Volver"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginid3"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/loginid3"
        android:layout_width="282dp"
        android:layout_height="69dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#FFC004"
        android:onClick="RecuperarContraseña"
        android:text="@string/recoverPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFPMail"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/editTextFPMail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:background="#EB000000"
        android:contextClickable="true"
        android:ems="10"
        android:hint="@string/writeMail"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#9F9F9F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewISPassword2" />

    <TextView
        android:id="@+id/textViewISPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:background="#F40202"
        android:text="@string/Mail"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFPName" />

    <EditText
        android:id="@+id/editTextFPName"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:background="#EB000000"
        android:ems="10"
        android:hint="@string/writeuserName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#9F9F9F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewISuserName2" />

    <TextView
        android:id="@+id/textViewISuserName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:background="#FA0707"
        android:text="@string/userName"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>