<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0004FF"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="91dp"
        android:layout_height="123dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextISuserName"
        app:layout_constraintStart_toEndOf="@+id/textViewISuserName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_tunatech" />

    <TextView
        android:id="@+id/textViewISuserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="110dp"
        android:background="#FDBF05"
        android:text="@string/userName"
        android:textColor="#130A0A"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextISuserName"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="36dp"
        android:background="#000000"
        android:ems="10"
        android:hint="@string/writeuserName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#9F9F9F"
        app:layout_constraintBottom_toTopOf="@+id/textViewISPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewISuserName" />

    <TextView
        android:id="@+id/textViewISPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="187dp"
        android:background="#FFBF00"
        android:text="@string/Password"
        android:textColor="#040303"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextISuserName" />

    <EditText
        android:id="@+id/editTextISPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="17dp"
        android:background="#0C0A10"
        android:contextClickable="true"
        android:ems="10"
        android:hint="@string/writePassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#9F9F9F"
        app:layout_constraintBottom_toTopOf="@+id/loginid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewISPassword" />

    <Button
        android:id="@+id/loginid"
        android:layout_width="269dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFBF00"
        android:onClick="IniciarSesion"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#FFC003"
        android:onClick="Registrarse"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/forget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextISPassword"
        app:layout_constraintVertical_bias="0.833"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/forget"
        android:layout_width="267dp"
        android:layout_height="59dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#FDBE00"
        android:onClick="OlvidarContra"
        android:text="@string/forgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>